# erring

./: .env.example  .gitignore  IMPLEMENTATION.md  LICENSE  README.md  STATUS.md  pyproject.toml
erring/: __init__.py  app.py  cli.py  config.py  context.py  conversation.py  crud.py  db.py  followthrough.py  llm.py  models.py  prompts.py  reflection.py  schema.sql  summary.py  telegram.py
prompts/: cold_start.md  conversation.md  demo_plan.md  followthrough.md  general_system.md  plan.md  reflection.md  summary.md  system_prompt.md  task_prompts.md
tests/: conftest.py  test_core_loop.py  test_crud.py  test_reflection_models.py  test_schema.py  test_summary_trigger.py  test_telegram.py
